# BOIDS

./: CMakeLists.txt  README.md  main.cpp
docs/: Doxyfile
src/: CMakeLists.txt
src/headers/: bird.h  game.h  globals.h  graphics.h  input.h  obstacle.h  sprite.h
src/headers/engn/: game.h  globals.h  graphics.h  input.h  sprite.h
src/headers/math/: point.h  util.h
src/src/: bird.cpp  game.cpp  graphics.cpp  input.cpp  obstacle.cpp  sprite.cpp
src/src/engn/: game.cpp  graphics.cpp  input.cpp  sprite.cpp
src/src/math/: point.cpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/math/: test_angle.cpp
